--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
+  - python -m nltk.downloader wordnet stopwords
 
 script: pytest
