--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
-  - python -m nltk.downloader wordnet stopwords
+  - python -m nltk.downloader averaged_perceptron_tagger stopwords wordnet
 
 script: pytest
