--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
   - python -m nltk.downloader $(tr "\n" " " < ".nltk_packages")
+  - pip install coveralls
 
-script: pytest
+script: pytest --cov
+
+after_success:
+  coveralls
