--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "eslint.options": {
+        "configFile": ".eslintrc"
+    },
+
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
 
