--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ gunicorn==19.6.0
 grequests == 0.3.0
 nltk==3.2.1
 retrying==1.3.3
+simplejson==3.10.0
 srt==1.2.0
+webassets-babel==0.3.0
 wordnik-py3==2.1.2
