--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "subvoc",
   "version": "1.0.0",
   "devDependencies": {
-    "autoprefixer": "^6.7.6",
+    "autoprefixer": "^6.7.7",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "eslint": "^3.17.0",
-    "postcss-cli": "^3.0.0-beta",
-    "rollup": "^0.41.4",
+    "babel-preset-es2015": "^6.24.0",
+    "eslint": "^3.19.0",
+    "npm-check-updates": "2.10.4",
+    "postcss-cli": "^3.0.0",
+    "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^3.2.2"
   }
