--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.5.3
 cssmin==0.2.0
 flask==0.12.1
 Flask-Assets==0.12
+Flask-JSON==0.3.0
 gunicorn==19.7.1
 grequests == 0.3.0
 nltk==3.2.2
