--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,5 @@
     },
 
     "python.linting.flake8Enabled": true,
-    "python.linting.pylintEnabled": false,
-
-    "python.unitTest.pyTestEnabled": true
+    "python.linting.pylintEnabled": false
 }
