--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,15 @@
-language: python
-python:
-  - "3.5"
+sudo: required
 
-before_install:
-  - nvm install 6.10.2
+language: python
+
+services:
+  - docker
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r dev-requirements.txt
-  - python -m nltk.downloader $(tr "\n" " " < ".nltk_packages")
   - pip install coveralls
 
 script:
-  - flake8
-  - pytest --cov
-  - eslint static/js/app/**/*.es6
+  - scripts/check.sh
 
 after_success:
   - coveralls
