--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
+    "enzyme": "2.8.0",
     "eslint": "^3.19.0",
-    "npm-check-updates": "2.10.4",
+    "jest": "19.0.2",
+    "jest-enzyme": "3.0.0",
     "postcss-cli": "^3.0.0",
     "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-watch": "^3.2.2"
+    "rollup-plugin-babel": "^2.7.1"
+  },
+  "jest": {
+    "testMatch": ["**/*_test.es6"],
+    "verbose": true
+  },
+  "scripts": {
+    "build": "/opt/node_modules/rollup/bin/rollup --config",
+    "check": "npm-run-all -s lint test",
+    "dev": "onchange \"static/js/app/**/*.es6\" -- npm-run-all -s build check",
+    "lint": "/opt/node_modules/eslint/bin/eslint.js static/js/app/**/*.es6",
+    "test": "/opt/node_modules/jest/bin/jest.js"
   }
 }
