--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-    "plugins": [
-        "external-helpers",
-        "transform-react-jsx"
-    ],
-    "presets": [
-        ["es2015", { "modules": false }]
-    ]
+    "presets": ["es2015", "react"]
 }
