--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": "eslint:recommended",
     "env": {
-        "browser": true
+        "browser": true,
+        "jest": true
     },
     "parserOptions": {
         "ecmaVersion": 6,
