--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-  "name": "subvoc",
-  "version": "1.0.0",
-  "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "enzyme": "2.8.0",
-    "eslint": "^3.19.0",
-    "jest": "19.0.2",
-    "jest-enzyme": "3.0.0",
-    "postcss-cli": "^3.1.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1"
-  },
-  "jest": {
-    "testMatch": ["**/*_test.es6"],
-    "verbose": true
-  },
-  "scripts": {
-    "build": "/opt/node_modules/rollup/bin/rollup --config",
-    "check": "npm-run-all -s lint test",
-    "dev": "onchange \"static/js/app/**/*.es6\" -- npm-run-all -s build check",
-    "lint": "/opt/node_modules/eslint/bin/eslint.js static/js/app/**/*.es6",
-    "test": "/opt/node_modules/jest/bin/jest.js"
-  }
+    "name": "subvoc",
+    "version": "1.0.0",
+    "devDependencies": {
+        "array.prototype.find": "^2.0.4",
+        "autoprefixer": "^6.7.7",
+        "babel-jest": "^19.0.0",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "classnames": "^2.2.5",
+        "enzyme-to-json": "^1.5.0",
+        "eslint": "^3.19.0",
+        "jest": "19.0.2",
+        "jest-enzyme": "3.0.0",
+        "postcss-cli": "^3.1.1",
+        "prop-types": "15.5.4",
+        "react": "^15.5.3",
+        "react-addons-test-utils": "^15.5.0",
+        "react-dom": "^15.5.3",
+        "react-slick": "^0.14.7",
+        "react-test-renderer": "15.5.4",
+        "rollup": "^0.41.6",
+        "rollup-plugin-babel": "^2.7.1",
+        "rollup-plugin-commonjs": "^8.0.2",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-replace": "^1.1.1",
+        "rollup-watch": "3.2.2"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "es6"
+        ],
+        "roots": [
+            "static/js/app"
+        ],
+        "snapshotSerializers": ["enzyme-to-json/serializer"],
+        "testMatch": [
+            "**/*.spec.es6"
+        ],
+        "transform": {
+            "^.+\\.es6": "babel-jest"
+        },
+        "verbose": true
+    }
 }
