--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "classnames": "^2.2.5",
+        "enzyme": "2.8.0",
         "enzyme-to-json": "^1.5.0",
         "eslint": "^3.19.0",
         "jest": "19.0.2",
