--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "array.prototype.find": "^2.0.4",
         "autoprefixer": "^6.7.7",
+        "axios": "0.16.1",
         "babel-jest": "^19.0.0",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-preset-es2015": "^6.24.1",
