--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "enzyme": "2.8.0",
         "enzyme-to-json": "^1.5.0",
         "eslint": "^3.19.0",
+        "history": "4.6.1",
         "jest": "19.0.2",
         "jest-enzyme": "3.0.1",
         "postcss-cli": "^3.1.1",
