--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "extends": "eslint:recommended",
     "env": {
         "browser": true,
-        "jest": true
+        "jest": true,
+        "node": true
     },
     "parserOptions": {
         "ecmaVersion": 6,
