--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "react-dom": "^15.5.4",
         "react-slick": "^0.14.8",
         "react-test-renderer": "15.5.4",
+        "redux": "^3.6.0",
+        "react-redux": "5.0.4",
+        "redux-saga": "0.14.6",
         "rollup": "^0.41.6",
         "rollup-plugin-babel": "^2.7.1",
         "rollup-plugin-commonjs": "^8.0.2",
